# galago_gazebo_simulator

./: README.md
ballistic_trajectory_generator/: CMakeLists.txt  package.xml
ballistic_trajectory_generator/generator/: generator.py
ballistic_trajectory_generator/srv/: Trajectory.srv
galago_gazebo_models/: CMakeLists.txt  package.xml
galago_gazebo_models/meshes/galago_simple/: galago_simple.dae
galago_gazebo_models/meshes/galago_springs/: galago_simple_base.dae  galago_simple_spring.dae
galago_gazebo_models/meshes/hopter/: disk.dae  disk.stl  disk2.dae  hopter_bumper.stl  leg.dae  leg_support.dae
galago_gazebo_models/urdf/: model.xml
galago_gazebo_models/urdf/galago_simple/: galago_simple.urdf
galago_gazebo_models/urdf/galago_springs/: 1galago_springs.urdf  2galago_springs.urdf  galago_springs.urdf
galago_gazebo_models/urdf/hopter_legs/: hopter_legs.urdf
galago_gazebo_models/urdf/hopter_simple/: hopter_simple.urdf
galago_gazebo_plugins/: CMakeLists.txt  package.xml
galago_gazebo_simulator/: CMakeLists.txt  package.xml
galago_gazebo_simulator/launch/: galago_simple_moon_flat.launch  galago_simple_moon_flat_nogui.launch  galago_simple_moon_gale.launch  galago_springs.launch  galago_springs_moon_flat.launch  galago_springs_moon_gale_optirun.launch  hopter_legs_moon_flat.launch  hopter_legs_moon_gale.launch  hopter_simple_moon_flat.launch
galago_gazebo_simulator/worlds/: jumping_box.world  simple_asteroid_flat.world  simple_moon_flat.world  simple_moon_gale.world
