<?xml version="1.0"?>
<package>
  <name>ballistic_trajectory_generator</name>
  <version>0.0.1</version>
  <description>ballistic_trajectory_generator</description>
  <maintainer email="PW@PW.PW">PW</maintainer>
  <license>TODO</license>

  <author>PW</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
